--- a/src/components/main.module.scss
+++ b/src/components/main.module.scss
@@ -1,5 +1,22 @@
 .main {
+  background-color: rgb(255, 255, 255);
+  margin: 15vh 50vh;
   display: flex;
-  margin: 0 auto;
-  width: 30%;
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid #888888;
+  &__cards {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    overflow-y: scroll;
+    border-radius: 10px;
+    box-shadow: 1px 2px 3px #888888;
+    -ms-overflow-style: none; /* IE 11 */
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
 }
