--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#root {
+  width: 100%;
+  width: -webkit-fill-available;
 }
 
+body,
+html {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-size: 100%;
+  line-height: 1.5;
+  font-family: "Raleway", sans-serif;
+  width: -webkit-fill-available;
+  width: 100%;
+}
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Raleway", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4 { 
+  margin: 0.3em 0 0.5em;
+  line-height: 1.25;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+h3 {
+  font-size: 1.2em;
+}
+
+ul,
+ol {
+  margin: 1em 0;
+  padding-left: 40px;
+}
+
+p,
+figure {
+  margin: 1em 0;
+}
+
+a img {
+  border: none;
+}
+
+sup,
+sub {
+  line-height: 0;
 }
