--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -29,6 +29,20 @@
     div {
       font-weight: 100;
     }
+    &__tagContainer {
+      display: flex;
+      flex-wrap: wrap;
+      max-width: -webkit-fill-available;
+      max-width: -moz-available;
+      &__tag {
+        background-color: #d3d3d3;
+        padding: 10px;
+        height: fit-content;
+        border-radius: 5px;
+        margin: 5px;
+        width: fit-content;
+      }
+    }
   }
 }
 
